  macrobenchmark suite.
  (Martin Pool)

New Features
************

* The ``lp:`` prefix will now use your known username (from
  ``bzr launchpad-login``) to expand ``~`` to your username.  For example:
  ``bzr launchpad-login user && bzr push lp:~/project/branch`` will now
  push to ``lp:~user/project/branch``.  (John Arbash Meinel)

Bug Fixes
*********

* Allow using both --using and --diff-options. 
  (Matthäus G. Chajdas, #234708)

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.  
  (Martin Pool, #192859)

* ``bzr ignore PATTERNS`` exits with error if a bad pattern is supplied.
  ``InvalidPattern`` exception error message now shows faulting
  regular expression.
  (Parth Malwankar #300062)

* ``clean-tree`` issues a warning if it is unable to delete a file
  due to ``errno.EACCES`` instead of exiting with an error on Windows.
  (Parth Malwankar, #430785)

* CommitBuilder now uses the committer instead of _config.username to generate
  the revision-id.  (Aaron Bentley, #614404)

* Cope with Microsoft FTP Server and VSFTPd that return reply '250
  Directory created' when mkdir succeeds.  (Martin Pool, #224373)

* Decrease peak memory during ``bzr send``. The old code was caching all
  text content and all inventory strings for all revisions before
  computing the diffs. Now we only cache as long as there is a child that
  will need them. Sending 2000 bzr revisions drops from 1.2GB peak to
  256MB peak. (John Arbash Meinel, #614576)

* Don't print internal object name when print an invalid revision spec
  error.  (Neil Martinsen-Burrell, #598701)

* Fix ``AttributeError on parent.children`` when adding a file under a 
  directory that was a symlink in the previous commit.
  (Martin Pool, #192859)

* ``HTTP/1.1`` test servers now set a ``Content-Length`` header to comply
  with pedantic ``HTTP/1.1`` clients. (Vincent Ladeuil, #568421)
